Proyecto/nbproject/private/Default-build.log
g++ -o a.out main.cpp blastobject.cpp getmatrix.cpp
blastobject.cpp:117:20: error: empty character constant
         if(arr[i]!=''){
                    ^~
blastobject.cpp:127:10: error: empty character constant
   arr[j]='';
          ^~
blastobject.cpp: In member function ‘int blastobject::repeater(char**, int)’:
blastobject.cpp:42:33: error: expected unqualified-id before ‘,’ token
     int aux = 0, T=13 , X=9, S, ,maxscre=13, scre, ptr;
                                 ^
blastobject.cpp:73:5: error: ‘auxscre’ was not declared in this scope
     auxscre += score(secuencia[x][w], comparador[z][w]); //Puede fallar
     ^~~~~~~
blastobject.cpp:73:55: error: ‘score’ cannot be used as a function
     auxscre += score(secuencia[x][w], comparador[z][w]); //Puede fallar
                                                       ^
blastobject.cpp:75:15: error: expected primary-expression before ‘>’ token
      if(scre => T){
               ^
blastobject.cpp:76:16: error: expected primary-expression before ‘>’ token
       if(scre => maxscre){
                ^
blastobject.cpp:79:12: error: ‘i’ was not declared in this scope
        for(i=0; i<n; i++){
            ^
blastobject.cpp:81:38: error: ‘HPS’ was not declared in this scope
         cout << "Máximo actual: "<< HPS[i];
                                      ^~~
blastobject.cpp:101:25: error: ‘extend’ was not declared in this scope
     extend(ptr, n, lista);
                         ^
blastobject.cpp:102:16: error: ‘rescore’ was not declared in this scope
  while(rescore() => T){
                ^
blastobject.cpp:102:19: error: expected primary-expression before ‘>’ token
  while(rescore() => T){
                   ^
blastobject.cpp: In function ‘int rescore(char)’:
blastobject.cpp:113:15: error: invalid conversion from ‘int’ to ‘char*’ [-fpermissive]
     endptr=arr+1;
            ~~~^~
blastobject.cpp:115:25: error: request for member ‘length’ in ‘arr’, which is of non-class type ‘char’
     for (int i=0; i<arr.length(); m++)
                         ^~~~~~
blastobject.cpp:115:35: error: ‘m’ was not declared in this scope
     for (int i=0; i<arr.length(); m++)
                                   ^
blastobject.cpp:117:17: error: invalid types ‘char[int]’ for array subscript
         if(arr[i]!=''){
                 ^
blastobject.cpp:118:30: error: invalid types ‘char[int]’ for array subscript
         finscre += stoi(arr[i]);
                              ^
blastobject.cpp:123:26: error: qualified-id in declaration before ‘(’ token
 void blastobject:: extend(int ptr, int n, char** lista){
                          ^
blastobject.cpp:268:1: error: expected ‘}’ at end of input
 }
 ^
Makefile:2: recipe for target 'compilar' failed
make: *** [compilar] Error 1
